# fair-trees

./: CITATION.cff  LICENSE  README.md  gitignore  meson.build  pyproject.toml
.github/workflows/: build_wheels.yml
fair_trees/: __init__.py  _config.py  _datasets.py  meson.build
fair_trees/__check_build/: __init__.py  meson.build
fair_trees/_build_utils/: version.py
fair_trees/ensemble/: __init__.py  _forest.py
fair_trees/metrics/: __init__.py  meson.build
fair_trees/neighbors/: __init__.py  meson.build
fair_trees/preprocessing/: __init__.py  meson.build
fair_trees/tree/: __init__.py  _classes.py  _criterion.pxd  _criterion.pyx  _tree.pxd  _tree.pyx  meson.build
fair_trees/utils/: _array_api.py  _indexing.py  _unique.py  discovery.py  meson.build
fair_trees/utils/_repr_html/: base.py  estimator.py  params.py
